Drop unsupported python and django versions.

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 [tox]
 downloadcache = {toxworkdir}/_download/
 envlist =
-    py{36}-{2.2.X},
+    py{310}-django{32,4},
     flake8
 
 [testenv]
 commands = {envpython} runtests.py
 deps =
-    py36: mysqlclient
+    py310: mysqlclient
     psycopg2
-    2.2.X: django>=2.2,<2.3
+    django32: django>=3.2,<3.1.16
+    django4: django>=4.0.8
 
 [testenv:flake8]
 basepython=python
