--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist =
     py{310}-django{32,4},
     flake8
 
+[gh-actions]
+python =
+    3.10: py310
+
 [testenv]
 commands = {envpython} runtests.py
 deps =
