--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands = {envpython} runtests.py
 deps =
     py310: mysqlclient
     psycopg2
-    django32: django>=3.2,<3.1.16
+    django32: django>=3.1.16,<=3.2
     django4: django>=4.0.8
 
 [testenv:flake8]
