update django version tox

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
     psycopg2
     django32: django>=3.1.16,<=3.2
     django4: django>=4.0.8
+    django51: django>=5.1
 
 [testenv:flake8]
 basepython=python
