--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 downloadcache = {toxworkdir}/_download/
 envlist =
-    py{310}-django{32,4,51},
-    flake8
+    py{310}-django{32,4,51}
 
 [gh-actions]
 python =
@@ -16,8 +15,3 @@ deps =
     django32: django>=3.1.16,<=3.2
     django4: django>=4.0.8
     django51: django>=5.1
-
-[testenv:flake8]
-basepython=python
-deps=flake8
-commands=flake8 --max-line-length=120 .
