--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,24 @@
 [tox]
 downloadcache = {toxworkdir}/_download/
 envlist =
-    py{310}-django{32,4},
+    py{310,312}-django{32,4,51},
     flake8
 
 [gh-actions]
 python =
     3.10: py310
+    3.12: py312
 
 [testenv]
 commands = {envpython} runtests.py
 deps =
     py310: mysqlclient
     psycopg2
+    py312: mysqlclient
+    psycopg2
     django32: django>=3.1.16,<=3.2
-    django4: django>=4.0.8
+    django4: django>=4.0.8,<5
+    django51: django>=5.1,<5.2
 
 [testenv:flake8]
 basepython=python
