--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 downloadcache = {toxworkdir}/_download/
 envlist =
-    py{310,312}-django{32,4,51},
+    py{310}-django{32,4},
+    py{312}-django{52},
     flake8
 
 [gh-actions]
@@ -18,7 +19,7 @@ deps =
     psycopg2
     django32: django>=3.1.16,<=3.2
     django4: django>=4.0.8,<5
-    django51: django>=5.1,<5.2
+    django5: django>=5.2
 
 [testenv:flake8]
 basepython=python
